# csv-to-video-genarator

./: .gitignore  GITHUB_ACTIONS.md  MANIM_AUTOMATION.md  Oneclickvideo.ipynb  README.md  generate_video_from_csv.py  manim.cfg  newvideo.py  pyproject.toml  requirements-manim.txt  requirements.txt  sample_questions.csv  setup.py  setup_manim.bat  setup_manim.sh
.github/workflows/: csv-to-video.yml  manim-video-generator.yml
config/: video_automation_config.json
csv_to_video_generator/: __init__.py  video_creator.py
generated_videos/: .gitkeep
manim_scenes/: README.md  csv_data_animation.py  example_basic.py  quiz_animation.py
