[tool.poetry]
name = "csv_to_video_generator"
version = "0.1.0"
description = "A package to generate videos from CSV data"
authors = ["Yash Kavaiya <yash@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pandas = "^1.3.3"
Pillow = "^8.3.2"
moviepy = "^1.0.3"
gTTS = "^2.2.3"
manim = "^0.18.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
